wrote css to fix drafting slot div spacings

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,8 +1,17 @@
-div.owner-container {
+.owner-container {
     background-color: #eeeeee;
     height: 250px;
     width: 300px;
     box-shadow: 10px 10px grey;
     padding: 10px;
     border-radius: 10px;
+}
+
+#drafting-slots {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto;
+    grid-gap: 10px;
+    padding-top: 10px;
+    padding-bottom: 30px;
 }
